--- a/server/public/index.html
+++ b/server/public/index.html
@@ -9,18 +9,18 @@
 
 <body>
     <header>
-        <h1>Calculator</h1>
+        <h1>Server Calculator</h1>
     </header>
 
     <form onSubmit="submitForm(event)">
         <input type="number" id="number1" />
-        <button onClick="addNumber(event)">+</button>
-        <button onClick="minusNumber(event)">-</button>
-        <button onClick="multiplyNumber(event)">*</button>
-        <button onClick="divideNumber(event)">/</button>
+        <button type="button" onClick="addNumber(event)">+</button>
+        <button type="button" onClick="minusNumber(event)">-</button>
+        <button type="button" onClick="multiplyNumber(event)">*</button>
+        <button type="button" onClick="divideNumber(event)">/</button>
          <input type="number" id="number2" />
-         <button onClick="(event)">/</button>
-         
+         <button>=</button>
+         <button onClick="clearInput(event)">C</button>
     </form>
     <div id="content">
     </div>
