modified readme file

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        <h1>Server Calculator</h1>
+        <h1>Weekend Server Calculator</h1>
     </header>
 
     <div id="calculator">
