configured style.css

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -21,10 +21,13 @@
          <input type="number" id="number2" />
          <button onClick="submitForm(event)">=</button>
          <button type="button" onClick="clearInput(event)">C</button>
-    </div>
-    <div id="content">
-    </div>
+
+            
+    <table id="content">
+    </table>
     
+    </div>
+ 
     <!-- Our JavaScript file -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="scripts/client.js"></script>
